--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
 :root {
     --background: #ffffff;
     --foreground: #171717;
+    --primary: #1774b1;
+    --typography: #0b061a;
 }
 
 @theme inline {
@@ -10,6 +12,8 @@
     --color-foreground: var(--foreground);
     --font-sans: var(--font-geist-sans);
     --font-mono: var(--font-geist-mono);
+    --color-primary: var(--primary);
+    --color-typography: var(--typography);
 }
 
 body {
