--- a/src/components/auth/embla.css
+++ b/src/components/auth/embla.css
@@ -56,15 +56,42 @@
 
 .dot {
     flex: 1;
-    height: 0.25rem;
+    height: 0.375rem;
     border-radius: 9999px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #f9fafb;
     transition: all 0.3s ease;
     cursor: pointer;
     border: none;
     padding: 0;
+    position: relative;
+    overflow: hidden;
 }
 
 .dot.active {
+    /* background-color: #3b82f6; */
+}
+
+.dot.active::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     background-color: #3b82f6;
+    transform: translateX(-100%);
+    animation: dot-progress 5000ms linear forwards;
+}
+
+.dot:hover::after {
+    animation-play-state: paused;
+}
+
+@keyframes dot-progress {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
