--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
+    --font-sans: var(--font-sora);
+    --font-mono: var(--font-sora);
     --color-primary: var(--primary);
     --color-typography: var(--typography);
 }
@@ -19,5 +19,5 @@
 body {
     background: var(--background);
     color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-sora);
 }
